# paleolithic

./: CMakeLists.txt  CMakeLists.txt.in  README.md  readme_object_pool.md  setup.sh  start.sh
lib/: CMakeLists.txt
lib/impl/bitmanip/: bitmanip.cc
lib/impl/core/: log.cc
lib/impl/dyn_prog/: fibo.cc
lib/impl/graph/: graph.cpp
lib/impl/logging/: logger.cc
lib/impl/memory/: object_pool.cc
lib/impl/thread/: threadpool.cc
lib/public/bitmanip/: bitmanip.h
lib/public/comp_geom/: comp_geom.h
lib/public/core/: log.h
lib/public/graph/: graph.h
lib/public/logging/: logger.h
lib/public/memory/: object_pool.h
lib/public/thread/: threadpool.h
py/: readme.md
src/: main.cpp
src/impl/dyn_prog/: fibo.cpp
src/public/dyn_prog/: fibo.h
test/: CMakeLists.txt  test_bitmanip.cc  test_dyn_prog.cc  test_object_pool.cc  test_object_pool.cpp
